# Antiland

./: .gitignore  .readthedocs.yaml  Antiland.py  README.md  README.rst  __init__.py  anti.py  bot_test.py  build.bat  classes.json  functions.json  pyproject.toml  requirements.txt  setup.py  testing_new_versions.py  upload.bat
Anti.egg-info/: PKG-INFO  SOURCES.txt
Antiland/: __init__.py  account.py  bot.py  dialogue.py  message.py  message_updater.py  user.py
Antiland/ext/commands/: __init__.py  bot.py
core/: bot.py
docs/: api.rst  classes.json  conf.py  index copy.rst  index.rst  intro.rst  modules.rst  quickstart copy.rst  quickstart.rst  requirements.txt
docs/api/: bot.rst
docs/commands/: api.rst
docs/ext/commands/: commands.rst
docs/extensions/: attributetable.py  jsoner.py
docs/source/: api.rst  conf.py  index.rst  intro.rst  quickstart.rst
docs/source/ext/commands/: api.rst  commands.rst  index.rst
examples/: commands_bot.py  joke_bot.py  on_message.py  send_image.py  send_text.py  stats_example.py
sphinx/: index.rst
sphinx/source/: conf.py
src/: __init__.py  setup.py
src/UNKNOWN.egg-info/: SOURCES.txt  top_level.txt
