[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "Antiland"
version = "0.52"
authors = [
  { name="TheUnsocialEngineer", email="TheUnsocialEngineer@protonmail.com" },
]
description = "A package to create bots on Antiland.com"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/TheUnsocialEngineer/Anti.py"
"Bug Tracker" = "https://github.com/TheUnsocialEngineer/Anti.py/issues"